updated folder structure

--- a/notebooks/mask_recognition.ipynb
+++ b/notebooks/mask_recognition.ipynb
@@ -421,9 +421,9 @@
     "    training_loop(test_loader, epoch)\n",
     "    model.train()\n",
     "\n",
-    "torch.save(model.state_dict(), 'mask_detection_model')\n",
+    "torch.save(model.state_dict(), '/main/model/mask_detection_model')\n",
     "model_scripted = torch.jit.script(model)\n",
-    "model_scripted.save('mask_detection_model.pt')"
+    "model_scripted.save('/main/model/mask_detection_model.pt')"
    ]
   },
   {
@@ -490,7 +490,7 @@
    "source": [
     "device = torch.device('cuda:0') if torch.cuda.is_available() else torch.device('cpu')\n",
     "print(f'Device: {device}')\n",
-    "model = torch.jit.load('/main/mask_detection_model.pt', map_location=device)\n",
+    "model = torch.jit.load('/main/model/mask_detection_model.pt', map_location=device)\n",
     "print(model)"
    ]
   },
